--- a/src/.gitattributes
+++ b/src/.gitattributes
@@ -4,7 +4,6 @@
 # Denote all files that are truly binary and should not be modified.
 *.snk binary
 *.pdf binary
-*.tiff binary
 *.docx binary
 *.png binary
-*.approved.txt binary
+*.approved.* binary
