--- a/src/Tests/Tests.csproj
+++ b/src/Tests/Tests.csproj
@@ -24,5 +24,8 @@
     <None Update="sample.pdf">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="sample.xlsx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 </Project>
