--- a/src/Tests/Tests.csproj
+++ b/src/Tests/Tests.csproj
@@ -8,11 +8,14 @@
     <PackageReference Include="ApprovalTests" Version="4.0.0" />
     <PackageReference Include="Microsoft.CSharp" Version="4.5.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
-    <PackageReference Include="MarkdownSnippets.MsBuild" Version="10.3.0" />
+    <PackageReference Include="MarkdownSnippets.MsBuild" Version="11.0.1">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Xunit" Version="2.4.1" />
-    <PackageReference Include="XunitLogger" Version="2.1.0" />
+    <PackageReference Include="XunitLogger" Version="2.3.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.1.1" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.2.0" />
     <ProjectReference Include="..\Aspose.ApprovalTests\Aspose.ApprovalTests.csproj" />
   </ItemGroup>
   <ItemGroup>
