--- a/src/Aspose.ApprovalTests/Aspose.ApprovalTests.csproj
+++ b/src/Aspose.ApprovalTests/Aspose.ApprovalTests.csproj
@@ -1,8 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <GeneratePackageOnBuild Condition="$(Configuration)=='Release'">true</GeneratePackageOnBuild>
-    <GenerateDocumentationFile Condition="$(Configuration)=='Release'">true</GenerateDocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="ApprovalTests" Version="4.0.0" />
@@ -10,9 +8,6 @@
     <PackageReference Include="Aspose.Cells" Version="19.7.0" />
     <PackageReference Include="Aspose.Words" Version="19.7.0" />
     <PackageReference Include="Aspose.Slides.NET" Version="19.7.0" />
-    <!--
-    <PackageReference Include="Aspose.HTML" Version="19.4.0" />
-    -->
-    <PackageReference Condition="$(Configuration)=='Release'" Include="Microsoft.SourceLink.GitHub" Version="1.0.0-beta2-19367-01" PrivateAssets="All" />
+    <PackageReference Include="ProjectDefaults" Version="1.0.3" PrivateAssets="All" />
   </ItemGroup>
 </Project>
