--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -8,4 +8,7 @@
     <PackageProjectUrl>https://github.com/SimonCropp/Aspose.ApprovalTests</PackageProjectUrl>
     <Description>Extends ApprovalTests to allow approval via Aspose.</Description>
   </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="ProjectDefaults" Version="1.0.3" PrivateAssets="All" />
+  </ItemGroup>
 </Project>
