--- a/src/appveyor.yml
+++ b/src/appveyor.yml
@@ -5,6 +5,8 @@ build_script:
 - ps: >-
     dotnet build src --configuration Release
 
+    appveyor PushArtifact \**\*received.*
+
     dotnet test src --configuration Release --no-build --no-restore
 test: off
 artifacts:
