--- a/src/appveyor.yml
+++ b/src/appveyor.yml
@@ -5,7 +5,7 @@ build_script:
 - ps: >-
     dotnet build src --configuration Release
 
-    appveyor PushArtifact \**\*received.*
+    Push-AppveyorArtifact \**\*received.*
 
     dotnet test src --configuration Release --no-build --no-restore
 test: off
