--- a/src/appveyor.yml
+++ b/src/appveyor.yml
@@ -4,8 +4,9 @@ skip_commits:
 build_script:
 - ps: >-
     dotnet build src --configuration Release
-
-    dotnet test src --configuration Release --no-build --no-restore
-test: off
+test:
+  categories:
+    except:
+    - Integration
 artifacts:
 - path: nugets\**\*.nupkg
