--- a/src/appveyor.yml
+++ b/src/appveyor.yml
@@ -4,9 +4,8 @@ skip_commits:
 build_script:
 - ps: >-
     dotnet build src --configuration Release
-test:
-  categories:
-    except:
-    - Integration
+
+    dotnet test src --configuration Release --no-build --no-restore
+test: off
 artifacts:
 - path: nugets\**\*.nupkg
